changes to the website

--- a/src/components/educationCard/EducationCard.scss
+++ b/src/components/educationCard/EducationCard.scss
@@ -41,12 +41,12 @@
 }
 
 .education-roundedimg {
-  object-fit: cover;
+  object-fit: fill;
   margin-right: 2rem;
   width: 6rem;
   height: 6rem;
   box-shadow: 0 0.5rem 1rem $lightBoxShadowDarker;
-  border-radius: 50%;
+  border-radius: 7%;
 }
 
 .education-card-right {
